Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/SMAX_PS_Work_Order_Metrics__c.object-meta.xml
<CustomObject>
    <label>Work Order Metrics</label>
    <nameField>
        <label>Work Order Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>