Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Work_Order_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>