Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Calc_Call_Upload_Time__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Calc_Call_Upload_Time__c</fullName>
    <description>Business Hours between the Last Labor Datetime and the Completed DateTime</description>
    <inlineHelpText>Business Hours between the Last Labor Datetime and the Completed DateTime</inlineHelpText>
    <label>Calculated Call Upload Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>