Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Calc_Days_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Calc_Days_to_Invoice__c</fullName>
    <description>Business Hours between the Ready to Review Datetime and the Invoiced Datetime</description>
    <inlineHelpText>Business Hours between the Ready to Review Datetime and the Invoiced Datetime</inlineHelpText>
    <label>Calculated Days to Invoice</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>