Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Calc_Onsite_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Calc_Onsite_Response_Time__c</fullName>
    <description>For Non-Remote Work Orders only. Business Hours between the Case Opened Datetime and First Labor Datetime.</description>
    <inlineHelpText>For Non-Remote Work Orders only. Business Hours between the Case Opened Datetime and First Labor Datetime.</inlineHelpText>
    <label>Calculated Onsite Response Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>