Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Calculated_Dispatch_Time__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Calculated_Dispatch_Time__c</fullName>
    <description>Business Hours between the Work Order Created Datetime to the First Assigned Datetime</description>
    <inlineHelpText>Business Hours between the Work Order Created Datetime to the First Assigned Datetime</inlineHelpText>
    <label>Calculated Dispatch Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>