Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Calculated_Downtime__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Calculated_Downtime__c</fullName>
    <description>Business Hours between the Case Opened Datetime and the Last Labor Datetime</description>
    <inlineHelpText>Business Hours between the Case Opened Datetime and the Last Labor Datetime</inlineHelpText>
    <label>Calculated Downtime</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>