Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_External_Id__c</fullName>
    <description>The External Id is system populated and should be of the form:  [WO-NUMBER]__[RecordType]</description>
    <externalId>true</externalId>
    <inlineHelpText>The External Id is system populated and should be of the form:  [WO-NUMBER]__[RecordType]</inlineHelpText>
    <label>External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>