Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_First_Assigned_Datetime__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_First_Assigned_Datetime__c</fullName>
    <description>Copied from the WO.SVMXC__First_Assigned_DateTime__c</description>
    <label>First Assigned Datetime</label>
    <type>DateTime</type>
</CustomField>