Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_First_Labor_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_First_Labor_DateTime__c</fullName>
    <description>The MIN of the Labor line Start Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</description>
    <inlineHelpText>The MIN of the Labor line Start Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</inlineHelpText>
    <label>First Labor DateTime</label>
    <type>DateTime</type>
</CustomField>