Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Invoiced_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Invoiced_DateTime__c</fullName>
    <description>Denotes the datetime that a work order was invoiced</description>
    <inlineHelpText>Denotes the datetime that a work order was invoiced</inlineHelpText>
    <label>Invoiced DateTime</label>
    <type>DateTime</type>
</CustomField>