Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Is_First_Time_Fix__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_First_Time_Fix__c</fullName>
    <inlineHelpText>Are the First Labor Date and Last Labor Date the same?</inlineHelpText>
    <label>Is First Time Fix?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>