Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Is_Repair_Callback__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Repair_Callback__c</fullName>
    <description>1 if there was a previous Work Order closed within 30 days prior.  0 no Work Order within 30 days</description>
    <inlineHelpText>1 if there was a previous Work Order closed within 30 days prior.  0 no Work Order within 30 days</inlineHelpText>
    <label>Is Repair Callback?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>