Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Last_Labor_Datetime__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Last_Labor_Datetime__c</fullName>
    <description>The MAX of the Labor line End Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</description>
    <inlineHelpText>The MAX of the Labor line End Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</inlineHelpText>
    <label>Last Labor Datetime</label>
    <type>DateTime</type>
</CustomField>