Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Metrics_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Metrics_Type__c</fullName>
    <label>Metrics Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field_Service</fullName>
                <label>Field Service</label>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>