Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Number_of_Assignments__c</fullName>
    <inlineHelpText>Dispatch Efficiency increments by 1 for every tech assigned</inlineHelpText>
    <label>Number of Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>