Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Ready_to_Review_Datetime__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Ready_to_Review_Datetime__c</fullName>
    <description>Copied from the WO.SVMX_PS_Ready_to_Review_Date_Time__c</description>
    <label>Ready to Review Datetime</label>
    <type>DateTime</type>
</CustomField>