Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Recalculate_FTF__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Recalculate_FTF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to cause the First Time Fix to recalculate</description>
    <inlineHelpText>Check this field to cause the First Time Fix to recalculate</inlineHelpText>
    <label>Recalculate FTF</label>
    <type>Checkbox</type>
</CustomField>