Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Recalculate_RCR__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Recalculate_RCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recalculate the Repair Callback Required (both 30 and 90 days)</description>
    <inlineHelpText>Recalculate the Repair Callback Required (both 30 and 90 days)</inlineHelpText>
    <label>Recalculate RCR</label>
    <type>Checkbox</type>
</CustomField>