Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Remote_Fix__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Remote_Fix__c</fullName>
    <inlineHelpText>1 denotes fixed remotely and not sent to field</inlineHelpText>
    <label>Remote Fix?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>