Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Repair_Callback_Required_90__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Repair_Callback_Required_90__c</fullName>
    <label>Repair Callback Required (90 Days)?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>