Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Repair_Callback_Required__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Repair_Callback_Required__c</fullName>
    <description>1 equals another Work Order opened within 30 days.  0 no Work Order within 30 days</description>
    <inlineHelpText>1 equals another Work Order opened within 30 days.  0 no Work Order within 30 days</inlineHelpText>
    <label>Repair Callback Required?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>