Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Metrics__c/fields/SMAX_PS_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Work Order Metrics</relationshipLabel>
    <relationshipName>Work_Order_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>